# mas_industrial_robotics

./: .gitignore  README.md  mir.repos
lifecycle_controller/ros/include/: lifecycle_controller.hpp
lifecycle_controller/ros/src/: lifecycle_controller.cpp
mir_direct_base_controller/: CMakeLists.txt  package.xml
mir_direct_base_controller/config/: config.yaml
mir_direct_base_controller/include/: compoenent_wise_pose_error_monitor.hpp  component_wise_pose_error_calculator.hpp  component_wise_pose_error_monitor.hpp  direct_base_controller_coordinator.hpp  twist_limiter.hpp  twist_synchronizer_utils.hpp
mir_direct_base_controller/launch/: direct_base_controller.launch.py
mir_direct_base_controller/src/: component_wise_pose_error_calculator.cpp  component_wise_pose_error_monitor.cpp  direct_base_controller_coordinator.cpp  main.cpp  twist_controller.cpp  twist_limiter.cpp  twist_synchronizer_utils.cpp  twistsynchronizer.cpp
mir_interfaces/: CMakeLists.txt
mir_interfaces/mir_perception/action/: ObjectDetection.action
mir_interfaces/mir_perception/msg/: ObjectList.msg  Workstation.msg
mir_interfaces/mir_world_model/action/: ObjectSelector.action
mir_manipulation/mir_gripper_controller/mir_gripper_controller/: serial_interface.py  teensy_gripper_controller_ros.py
mir_manipulation/mir_joint_space_controller/: CMakeLists.txt  README.md  package.xml  setup.py
mir_manipulation/mir_joint_space_controller/ros/config/: named_configurations.yaml
mir_manipulation/mir_joint_space_controller/ros/include/mir_joint_space_controller/: joint_space_controller.h  joint_value.h  model.h  optimiser.h  utils.h
mir_manipulation/mir_joint_space_controller/ros/launch/: joint_space_controller.launch
mir_manipulation/mir_joint_space_controller/ros/scripts/: joint_space_controller_node
mir_manipulation/mir_joint_space_controller/ros/src/: joint_space_controller.cpp  main.cpp  model.cpp  optimiser.cpp  utils.cpp
mir_manipulation/mir_joint_space_controller/ros/src/mir_joint_space_controller_ros/: joint_space_controller.py  utils.py
mir_manipulation/mir_moveit_youbot_brsu_2/: .setup_assistant  CMakeLists.txt  package.xml
mir_manipulation/mir_moveit_youbot_brsu_2/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  youbot.ros2_control.xacro  youbot.srdf  youbot.urdf.xacro
mir_manipulation/mir_moveit_youbot_brsu_2/launch/: demo.launch.py  move_group.launch copy.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
mir_manipulation/mir_pregrasp_planning/ros/src/mir_pregrasp_planning_ros/: kinematics.py
mir_navigation/mir_direct_base_controller/: CMakeLists.txt  README.md  package.xml
mir_navigation/mir_direct_base_controller/config/: config.yaml
mir_navigation/mir_direct_base_controller/include/: component_wise_pose_error_calculator.hpp  direct_base_controller_coordinator.hpp  twist_controller.hpp  twist_synchronizer_utils.hpp  twistsynchronizer.hpp
mir_navigation/mir_direct_base_controller/src/: component_wise_pose_error_calculator.cpp  component_wise_pose_error_monitor.cpp  twist_synchronizer_utils.cpp  twistsynchronizer.cpp
mir_perception/mir_object_recognition/: CMakeLists.txt
mir_perception/mir_object_recognition/ros/launch/: multimodal_object_recognition.launch.py
mir_perception/mir_object_recognition/ros/src/: multimodal_object_recognition.cpp
mir_perception/mir_object_segmentation/: CMakeLists.txt
mir_perception/mir_ppt_detection/: README.md  package.xml  setup.cfg  setup.py
mir_perception/mir_ppt_detection/mir_ppt_detection/: ppt_detector.py
mir_planning/mir_actions/mir_big_tree/: CMakeLists.txt  package.xml
mir_planning/mir_actions/mir_big_tree/bt/: big_tree_bt.xml
mir_planning/mir_actions/mir_big_tree/include/mir_big_tree/: big_tree.hpp
mir_planning/mir_actions/mir_big_tree/src/: big_tree.cpp
mir_planning/mir_actions/mir_common_actions/: CMakeLists.txt  package.xml
mir_planning/mir_actions/mir_common_actions/include/mir_common_actions/: align_to_pose.hpp  check_if_base_centered.hpp  grasp_action.hpp  move_arm.hpp  move_arm_to_pose.hpp  verify_grasp_action.hpp
mir_planning/mir_actions/mir_common_actions/src/: align_to_pose.cpp  check_if_base_centered.cpp  grasp_action.cpp  move_arm.cpp  move_arm_to_pose.cpp  verify_grasp_action.cpp
mir_planning/mir_actions/mir_move_base_safe/: CMakeLists.txt  package.xml
mir_planning/mir_actions/mir_move_base_safe/bt/: move_base_safe_bt.xml
mir_planning/mir_actions/mir_move_base_safe/include/mir_move_base_safe/: move_base_safe.hpp
mir_planning/mir_actions/mir_move_base_safe/src/: move_base_safe.cpp  move_base_safe_test.cpp
mir_planning/mir_actions/mir_perceive_location/: CMakeLists.txt  package.xml
mir_planning/mir_actions/mir_perceive_location/bt/: bt.xml  perceive_location_bt.xml
mir_planning/mir_actions/mir_perceive_location/include/mir_perceive_location/: perceive_location.hpp
mir_planning/mir_actions/mir_perceive_location/src/: perceive_location.cpp  perceive_location_test.cpp
mir_planning/mir_actions/mir_pick_object/: CMakeLists.txt  package.xml
mir_planning/mir_actions/mir_pick_object/bt/: bt.xml  pick_object_bt.xml
mir_planning/mir_actions/mir_pick_object/include/mir_pick_object/: pick_object.hpp  select_object.hpp
mir_planning/mir_actions/mir_pick_object/src/: pick_object.cpp  pick_object_test.cpp  select_object.cpp
mir_planning/mir_world_model/: CMakeLists.txt  README.md  package.xml
mir_planning/mir_world_model/config/: arena.yaml
mir_planning/mir_world_model/include/mir_world_model/: world_model.hpp  world_model_node.hpp
mir_planning/mir_world_model/launch/: mir_world_model.launch.py
mir_planning/mir_world_model/src/: world_model.cpp  world_model_node.cpp
mir_robots/mir_bringup/launch/: robot.launch.py  view_youbot.launch.py
mir_robots/mir_description/urdf/grippers/dynamixel/v2/: dynamixel_gripper.urdf.xacro
mir_robots/mir_hardware_config/youbot-brsu-2/urdf/: robot.urdf.xacro
(+1 files in other folders)
