<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mir_perceive_location</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vamsikalagaturu@gmail.com">robocup</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>mir_interfaces</depend>
  <depend>behaviortree_cpp</depend>
  <depend>mir_common_actions</depend>
  <depend>mir_move_base_safe</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
